add granular sound to condegram

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Condegram Spiral Plot</title>
       <link rel="stylesheet" type="text/css" href="style.css"/>
       <script data-require="d3@4.0.0" data-semver="4.0.0" src="https://d3js.org/d3.v5.js"></script>
+      <!-- < Tweakpane GUI -->
+    <script src="https://cdn.jsdelivr.net/npm/tweakpane@2.1.1/dist/tweakpane.min.js"></script>
   </head>
   <body>
 	<div id="chart"></div>
+  <script type="text/javascript" src="grainsynth/grainmachine.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
