triggering granular sound from condegram/spiral

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
       <script data-require="d3@4.0.0" data-semver="4.0.0" src="https://d3js.org/d3.v5.js"></script>
       <!-- < Tweakpane GUI -->
     <script src="https://cdn.jsdelivr.net/npm/tweakpane@2.1.1/dist/tweakpane.min.js"></script>
+    <!-- p5.js  -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
   </head>
   <body>
+    <div id="canvasContainer">
+    </div>
 	<div id="chart"></div>
   <script type="text/javascript" src="grainsynth/grainmachine.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main-p5.js"></script>
   </body>
 </html>
